Minor bug fixes
* fix F and C positions on weather page
* hopefully a final fix to bus timer so it doesn't get cut off before
sound plays anymore

--- a/src/components/weather/weather.css
+++ b/src/components/weather/weather.css
@@ -77,15 +77,15 @@ body.very-cold,
 
 .weather-details .tempType {
     font-size: 0.2em;
-    position: absolute;
+    position: relative;
 }
 
 .temp > .typeF {
-    bottom: 356px;
+    bottom: 43px;
 }
 
 .temp > .typeC {
-    bottom: 121px;
+    bottom: 43px;
 }
 
 .weather-details .temp .temp-number,
